Bug 494487 - Changing image user to letter-style or silhouette-style avatar fails
Summary: Changing image user to letter-style or silhouette-style avatar fails
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_users (other bugs)
Version First Reported In: 6.2.0
Platform: Other Linux
: HI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2024-10-10 21:02 UTC by medin
Modified: 2024-10-26 06:08 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.2.3
Sentry Crash Report:


Attachments
Error changing user icon to letter or human shaped icons (28.59 KB, image/png)
2024-10-11 08:28 UTC, medin
Details

Note You need to log in before you can comment on or make changes to this bug.
Description medin 2024-10-10 21:02:38 UTC
When I try to change user image to any of the built-in icons from letters or human shaped ones, it fails and shows error:
Failed to resize image: writing to temp file failed
Comment 1 Nate Graham 2024-10-10 21:46:25 UTC
Are you by any chance using an immutable OS distro?
Comment 2 medin 2024-10-11 08:26:54 UTC
(In reply to Nate Graham from comment #1)
> Are you by any chance using an immutable OS distro?

I'm just using regular Manjaro and Arch, this problem doesn't happen with provided built-in raw images, it only occurs with letter and human shapes icons.
Comment 3 medin 2024-10-11 08:28:02 UTC
Created attachment 174674 [details]
Error changing user icon to letter or human shaped icons
Comment 4 Nate Graham 2024-10-16 17:28:03 UTC
Yup, can reproduce. Possibly fallout from the new feature to allow you to crop images.
Comment 5 Bug Janitor Service 2024-10-25 14:08:12 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/4870
Comment 6 Nate Graham 2024-10-26 05:51:06 UTC
Git commit a2f391cda0a38d28e061683f8850dfbbb0ec1f07 by Nate Graham, on behalf of Harald Sitter.
Committed on 26/10/2024 at 05:25.
Pushed by ngraham into branch 'master'.

kcms/users: crop character faces properly

that is to say not at all. but feed it a valid rectangle so it actually
produces valid output

M  +1    -1    kcms/users/src/user.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/a2f391cda0a38d28e061683f8850dfbbb0ec1f07
Comment 7 Nate Graham 2024-10-26 06:08:02 UTC
Git commit ed1f137f62bf3164cf780001c7f83bc460e2e539 by Nate Graham.
Committed on 26/10/2024 at 05:51.
Pushed by ngraham into branch 'Plasma/6.2'.

kcms/users: crop character faces properly

that is to say not at all. but feed it a valid rectangle so it actually
produces valid output


(cherry picked from commit a2f391cda0a38d28e061683f8850dfbbb0ec1f07)

Co-authored-by: Harald Sitter <sitter@kde.org>

M  +1    -1    kcms/users/src/user.h

https://invent.kde.org/plasma/plasma-workspace/-/commit/ed1f137f62bf3164cf780001c7f83bc460e2e539