kcms/users: crop character faces properly

that is to say not at all. but feed it a valid rectangle so it actually
produces valid output

BUG: 494487